Production Ready security measure, CSP fix need to be done

--- a/popup.html
+++ b/popup.html
@@ -389,6 +389,10 @@
                         <h4>Processing</h4>
                         <div id="processing" class="bookmark-grid"></div>
                     </div>
+                    <div class="category">
+                        <h4>Recently Deleted (30 days)</h4>
+                        <div id="recentlyDeleted" class="bookmark-grid"></div>
+                    </div>
                 </div>
             </div>
         </div>
